--- a/styles/flower.css
+++ b/styles/flower.css
@@ -161,3 +161,30 @@ line-height: 30px;
     justify-content: space-between;
     margin-top: 48px;
  }
+
+ .input-info{
+    background-image: url('../Flower\ Asset/Rectangle 9.png');
+    width: 1440px;
+    height: 445px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+.input-middle-info h2 
+{
+    color: #272727;
+    font-size: 40px;
+    font-weight: 700;
+}
+.input-middle-info p{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.input-field {
+    border-radius: 8px;
+    background: #FFF;
+}
