--- a/styles/flower.css
+++ b/styles/flower.css
@@ -5,7 +5,8 @@
 
 body{
     font-family: 'Lato', sans-serif;
-
+    margin: 0;
+    padding: 0;
 }
 
 .head{
@@ -185,6 +186,35 @@ line-height: 30px;
 }
 
 .input-field {
+    padding: 0 10px;
     border-radius: 8px;
     background: #FFF;
+    width: 300px;
+    height: 50px;
+    border: none;
+}
+footer{
+    background: #111010;
+    padding: 100px 0px;
+    color:white;
+    margin-top: 128px;
+
+}
+
+.footer-content{
+    text-align: center;
+    width: 550px;
+    margin: 0 auto;
+}
+
+.footer-content h2 {
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.footer-content p{
+    color: rgba(255, 255, 255, 0.90);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
 }
